--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,27 +121,27 @@
 
     /* Para navegadores baseados em WebKit (Chrome, Safari, Edge) */
     ::-webkit-scrollbar {
-      width: 8px; /* Largura da scrollbar */
-      height: 8px; /* Altura (para scrollbars horizontais) */
+      width: 8px; 
+      height: 8px;
     }
 
     ::-webkit-scrollbar-track {
-      background: #1f2937; /* Cor do fundo da trilha (bg-gray-800) */
+      background: #1f2937;
       border-radius: 10px;
     }
 
     ::-webkit-scrollbar-thumb {
-      background-color: #4b5563; /* Cor da barra de rolagem (bg-gray-600) */
+      background-color: #4b5563; 
       border-radius: 10px;
-      border: 2px solid #1f2937; /* Cria uma pequena borda em volta da barra */
+      border: 2px solid #1f2937; 
     }
 
     ::-webkit-scrollbar-thumb:hover {
-      background-color: #6b7280; /* Cor da barra ao passar o mouse (bg-gray-500) */
+      background-color: #6b7280; 
     }
 
     /* Para Firefox */
-    scrollbar-width: thin; /* Deixa a barra mais fina */
-    scrollbar-color: #4b5563 #1f2937; /* Cor da barra e cor da trilha */
+    scrollbar-width: thin; 
+    scrollbar-color: #4b5563 #1f2937;
   }
 }
